Familiarizing myself with the theme

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -29,6 +29,7 @@
 
   <!-- CSS ================================================== -->
   {{ 'theme.scss.css' | asset_url | stylesheet_tag }}
+  {{ 'theme-extended.scss.css' | asset_url | stylesheet_tag }}
   {% include 'type' %}
 
   <!-- Header hook for plugins ================================================== -->
