--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -3,6 +3,13 @@
 <!--[if IE 9 ]><html class="ie9 no-js"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-5RJ9RZD');</script>
+  <!-- End Google Tag Manager -->
 
   <!-- Basic page needs ================================================== -->
   <meta charset="utf-8">
@@ -29,6 +36,7 @@
 
   <!-- CSS ================================================== -->
   {{ 'theme.scss.css' | asset_url | stylesheet_tag }}
+  {{ 'theme-extended.scss.css' | asset_url | stylesheet_tag }}
   {% include 'type' %}
 
   <!-- Header hook for plugins ================================================== -->
@@ -54,7 +62,10 @@
 {% endcomment %}
 <body id="{{ page_title | handle }}" class="{% if customer %}customer-logged-in {% endif %}template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }} {% if settings.ajax_cart_method == "drawer" %}ajax-on{% endif %}" >
 
-
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5RJ9RZD"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
 
   <div id="PageContainer" class="is-moved-by-drawer">
@@ -126,7 +137,8 @@
     {{ 'ajax-cart.js' | asset_url | script_tag }}
   {% endif %}
 
-  {{ 'all.min.js' | asset_url | script_tag }}
+  {{ 'all.js' | asset_url | script_tag }}
+  {{ 'all-extended.js' | asset_url | script_tag }}
 
   {% comment %}
     Template-specific js
