Remove JS from core assets

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -137,7 +137,7 @@
     {{ 'ajax-cart.js' | asset_url | script_tag }}
   {% endif %}
 
-  {{ 'all.js' | asset_url | script_tag }}
+  {{ 'all.min.js' | asset_url | script_tag }}
   {{ 'all-extended.js' | asset_url | script_tag }}
 
   {% comment %}
